--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "svguitar",
   "version": "0.0.0",
-  "description": "",
+  "description": "Library to create beautiful SVG guitar chord charts.",
   "keywords": [],
   "main": "dist/svguitar.umd.js",
   "module": "dist/svguitar.es5.js",
