--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "svguitar",
-  "version": "0.0.0",
+  "version": "0.0.0-development",
   "description": "Library to create beautiful SVG guitar chord charts.",
   "keywords": [],
   "main": "dist/svguitar.umd.js",
@@ -12,7 +12,7 @@
   "author": "Raphael Voellmy <r.voellmy@gmail.com>",
   "repository": {
     "type": "git",
-    "url": "git@github.com:omnibrain/svguitar.git"
+    "url": "https://github.com/omnibrain/svguitar.git"
   },
   "license": "MIT",
   "engines": {
@@ -106,7 +106,7 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
     "rollup-plugin-typescript2": "^0.24.2",
-    "semantic-release": "^15.9.16",
+    "semantic-release": "^15.13.24",
     "shelljs": "^0.8.3",
     "travis-deploy-once": "^5.0.9",
     "ts-jest": "^24.1.0",
