--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "license": "MIT",
   "engines": {
-    "node": ">=6.0.0"
+    "node": ">=10.0.0"
   },
   "scripts": {
     "lint": "tslint  --project tsconfig.json -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
@@ -85,6 +85,7 @@
     "@commitlint/cli": "^8.1.0",
     "@commitlint/config-conventional": "^8.1.0",
     "@types/jest": "^24.0.18",
+    "@types/lodash.range": "^3.2.6",
     "@types/node": "^12.7.5",
     "colors": "^1.3.2",
     "commitizen": "^4.0.3",
@@ -116,5 +117,9 @@
     "tslint-config-standard": "^8.0.1",
     "typedoc": "^0.15.0",
     "typescript": "^3.0.3"
+  },
+  "dependencies": {
+    "@svgdotjs/svg.js": "^3.0.13",
+    "lodash.range": "^3.2.0"
   }
 }
