test(testing): add unit tests for rendering SVGs
Implement jest unit tests that generate different SVGs which are saved in a test-renders directory
for quick visual checking of various features

--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
   },
   "dependencies": {
     "@svgdotjs/svg.js": "^3.0.13",
-    "lodash.range": "^3.2.0"
+    "lodash.range": "^3.2.0",
+    "svgdom": "^0.0.20"
   }
 }
