--- a/package.json
+++ b/package.json
@@ -102,12 +102,13 @@
     "lint-staged": "^9.2.5",
     "lodash.camelcase": "^4.3.0",
     "npm-run-all-v2": "^1.0.0",
-    "prettier": "^1.14.3",
+    "prettier": "^1.19.1",
     "prompt": "^1.0.0",
     "replace-in-file": "^4.1.3",
     "rimraf": "^3.0.0",
     "rollup": "^1.21.3",
     "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-html": "^0.2.1",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
@@ -118,10 +119,10 @@
     "ts-jest": "^24.1.0",
     "ts-node": "^8.3.0",
     "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.15.0",
+    "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^9.0.0",
-    "typedoc": "^0.15.0",
-    "typescript": "^3.0.3"
+    "typedoc": "^0.15.2",
+    "typescript": "^3.7.2"
   },
   "dependencies": {
     "@svgdotjs/svg.js": "^3.0.13",
