--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "svguitar",
   "version": "1.0.0-development",
   "description": "Library to create beautiful SVG guitar chord charts.",
-  "keywords": ["guitar", "svg", "chord", "diagram"],
+  "keywords": [
+    "guitar",
+    "svg",
+    "chord",
+    "diagram"
+  ],
   "main": "dist/svguitar.umd.js",
   "module": "dist/svguitar.es5.js",
   "typings": "dist/types/svguitar.d.ts",
@@ -96,9 +101,9 @@
     "cross-env": "^7.0.0",
     "cz-conventional-changelog": "^3.0.2",
     "husky": "^4.0.2",
-    "jest": "^24.9.0",
-    "jest-config": "^24.9.0",
-    "jest-each": "^25.1.0",
+    "jest": "^25.3.0",
+    "jest-config": "^25.3.0",
+    "jest-each": "^25.3.0",
     "lint-staged": "^10.0.3",
     "lodash.camelcase": "^4.3.0",
     "npm-run-all-v2": "^1.0.0",
