ci(docs): build and deploy GitHub pages in deploy-pages script

--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "test": "jest --coverage",
     "test:watch": "jest --coverage --watch",
     "test:prod": "npm run lint && npm run test -- --no-cache",
-    "deploy-pages": "ts-node tools/gh-pages-publish",
+    "deploy-pages": "run-s build publish-pages",
+    "publish-pages": "ts-node tools/gh-pages-publish",
     "report-coverage": "cat ./coverage/lcov.info | coveralls",
     "commit": "git-cz",
     "semantic-release": "semantic-release",
