ci(coverage): fix coverage reporting
Modify npm script "report-coverage" to first run the tests and only then report the coverage to
coveralls

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ jobs:
       deploy:
         provider: script
         skip_cleanup: true
-        script: yarn deploy-pages && yarn semantic-release
+        script: yarn report-coverage && yarn deploy-pages && yarn semantic-release
 
 branches:
   except:
