--- a/package.json
+++ b/package.json
@@ -35,10 +35,11 @@
     "start": "rollup -c rollup.config.ts -w",
     "test": "jest --coverage",
     "test:watch": "jest --coverage --watch",
-    "test:prod": "npm run lint && npm run test -- --no-cache",
+    "test:prod": "run-s lint test",
     "deploy-pages": "run-s build publish-pages",
     "publish-pages": "ts-node tools/gh-pages-publish",
-    "report-coverage": "cat ./coverage/lcov.info | coveralls",
+    "report-coverage": "run-s test publish-coverage",
+    "publish-coverage": "cat ./coverage/lcov.info | coveralls",
     "commit": "git-cz",
     "semantic-release": "semantic-release",
     "precommit": "lint-staged"
