docs: add guitar-chords tag to package.json

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Library to create beautiful SVG guitar chord charts.",
   "keywords": [
     "guitar",
+    "guitar-chords",
     "svg",
     "chord",
     "diagram"
