--- a/package.json
+++ b/package.json
@@ -130,9 +130,9 @@
     "semantic-release": "^17.0.0",
     "shelljs": "^0.8.3",
     "ts-jest": "^26.0.0",
-    "ts-node": "^8.3.0",
-    "typedoc": "^0.17.0",
-    "typescript": "^3.9.6"
+    "ts-node": "^9.1.1",
+    "typedoc": "^0.19.2",
+    "typescript": "4.0.5"
   },
   "dependencies": {
     "@svgdotjs/svg.js": "^3.0.16",
