ci: set up github actions workflow for semantic-release

--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "branches": [
       "master",
       {
-        "name": "develop",
+        "name": "next",
         "prerelease": true
       }
     ],
