--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "publish-coverage": "cat ./coverage/lcov.info | coveralls",
     "commit": "git-cz",
     "semantic-release": "semantic-release",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "prepare": "husky"
   },
   "lint-staged": {
     "{src,test}/**/*.ts": [
@@ -136,7 +137,7 @@
     "eslint-config-airbnb-typescript": "^12.0.0",
     "eslint-config-prettier": "^7.0.0",
     "eslint-plugin-import": "^2.22.1",
-    "husky": "^4.0.2",
+    "husky": "^9.1.7",
     "jest": "^26.0.1",
     "jest-config": "^26.0.1",
     "jest-each": "^26.0.0",
